js/src/tests/test262/built-ins/Error/prototype/toString/invalid-receiver.js
[
undefined
null
1
true
'
string
'
Symbol
(
)
]
.
forEach
(
(
v
)
=
>
{
assert
.
throws
(
TypeError
(
)
=
>
{
Error
.
prototype
.
toString
.
call
(
v
)
;
}
Error
.
prototype
.
toString
.
call
(
{
String
(
v
)
}
)
)
;
}
)
;
reportCompare
(
0
0
)
;
